gpt,bert,xlnet ... tokenizers

--- a/fastai2_nlp/fastai-huggingface.ipynb
+++ b/fastai2_nlp/fastai-huggingface.ipynb
@@ -3,8 +3,16 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "toc": true
    },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Huggingface-GPT2-example\" data-toc-modified-id=\"Huggingface-GPT2-example-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Huggingface GPT2 example</a></span></li><li><span><a href=\"#Small-note-on-different-way-to-tokenize/encode-using-huggingface\" data-toc-modified-id=\"Small-note-on-different-way-to-tokenize/encode-using-huggingface-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Small note on different way to tokenize/encode using huggingface</a></span></li><li><span><a href=\"#Prepare-data-for-training-GPT2-model-with-fastai\" data-toc-modified-id=\"Prepare-data-for-training-GPT2-model-with-fastai-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Prepare data for training GPT2 model with fastai</a></span><ul class=\"toc-item\"><li><span><a href=\"#Create-Fastai-tokenizer-using-HuggingFace-tokenizer\" data-toc-modified-id=\"Create-Fastai-tokenizer-using-HuggingFace-tokenizer-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Create Fastai tokenizer using HuggingFace tokenizer</a></span></li><li><span><a href=\"#TfmdLists\" data-toc-modified-id=\"TfmdLists-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>TfmdLists</a></span></li><li><span><a href=\"#Review-tfmdlists\" data-toc-modified-id=\"Review-tfmdlists-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Review tfmdlists</a></span></li><li><span><a href=\"#Dataloaders\" data-toc-modified-id=\"Dataloaders-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Dataloaders</a></span></li><li><span><a href=\"#Second-way-to-create-tfmlists-and-dataloaders:-preprocess-everything-before-hand-(do-once-and-for-all)\" data-toc-modified-id=\"Second-way-to-create-tfmlists-and-dataloaders:-preprocess-everything-before-hand-(do-once-and-for-all)-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Second way to create tfmlists and dataloaders: preprocess everything before hand (do once and for all)</a></span></li></ul></li><li><span><a href=\"#Fine-tuning-model\" data-toc-modified-id=\"Fine-tuning-model-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Fine-tuning model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Start-training\" data-toc-modified-id=\"Start-training-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Start training</a></span></li><li><span><a href=\"#Predict\" data-toc-modified-id=\"Predict-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>Predict</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Huggingface GPT2 example"
    ]
@@ -12,9 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import GPT2LMHeadModel, GPT2TokenizerFast"
@@ -23,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 12-layer, 768-hidden, 12-heads, 117M parameters.\n",
@@ -38,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -79,9 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -101,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -121,18 +119,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -154,9 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch"
@@ -165,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -188,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -218,9 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -243,9 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,9 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Small note on different way to tokenize/encode using huggingface"
    ]
@@ -274,9 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "text = [\"Hello I'm a single sentence\",\n",
@@ -289,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -310,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -334,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -951,9 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Second way to create tfmlists and dataloaders: preprocess everything before hand (do once and for all)"
    ]
@@ -961,9 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1006,9 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class TransformersTokenizer(Transform):\n",
@@ -1024,9 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "splits = [range_of(df_train), list(range(len(df_train), len(all_texts)))]\n"
@@ -1035,9 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tls = TfmdLists(tokenized, TransformersTokenizer(tokenizer), splits=splits, dl_type=LMDataLoader)\n",
@@ -1251,7 +1215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start training"
+    "## Start training"
    ]
   },
   {
@@ -1384,6 +1348,13 @@
    ],
    "source": [
     "learn.fit_one_cycle(2, 1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict"
    ]
   },
   {
@@ -1529,6 +1500,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "298.55px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
