--- a/fastai2_nlp/fastai_vnmese_lm_and_sentiment.ipynb
+++ b/fastai2_nlp/fastai_vnmese_lm_and_sentiment.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Prepare-df\" data-toc-modified-id=\"Prepare-df-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Prepare df</a></span></li><li><span><a href=\"#Build-LM-wiki\" data-toc-modified-id=\"Build-LM-wiki-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Build LM wiki</a></span><ul class=\"toc-item\"><li><span><a href=\"#TextBlock-datablock-summary\" data-toc-modified-id=\"TextBlock-datablock-summary-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>TextBlock datablock summary</a></span></li><li><span><a href=\"#Study-LM-dataloaders\" data-toc-modified-id=\"Study-LM-dataloaders-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Study LM dataloaders</a></span></li><li><span><a href=\"#Datablock-tfms\" data-toc-modified-id=\"Datablock-tfms-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Datablock tfms</a></span></li><li><span><a href=\"#Dataset-and-its-tfms-(train)\" data-toc-modified-id=\"Dataset-and-its-tfms-(train)-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Dataset and its tfms (train)</a></span></li><li><span><a href=\"#LM-learner\" data-toc-modified-id=\"LM-learner-2.5\"><span class=\"toc-item-num\">2.5&nbsp;&nbsp;</span>LM learner</a></span><ul class=\"toc-item\"><li><span><a href=\"#define-learner\" data-toc-modified-id=\"define-learner-2.5.1\"><span class=\"toc-item-num\">2.5.1&nbsp;&nbsp;</span>define learner</a></span></li><li><span><a href=\"#Param-groups-and-weight-shapes\" data-toc-modified-id=\"Param-groups-and-weight-shapes-2.5.2\"><span class=\"toc-item-num\">2.5.2&nbsp;&nbsp;</span>Param groups and weight shapes</a></span></li><li><span><a href=\"#quick-review-on-slice\" data-toc-modified-id=\"quick-review-on-slice-2.5.3\"><span class=\"toc-item-num\">2.5.3&nbsp;&nbsp;</span>quick review on slice</a></span></li><li><span><a href=\"#Start-training\" data-toc-modified-id=\"Start-training-2.5.4\"><span class=\"toc-item-num\">2.5.4&nbsp;&nbsp;</span>Start training</a></span></li><li><span><a href=\"#Re-check-learnable-parameters\" data-toc-modified-id=\"Re-check-learnable-parameters-2.5.5\"><span class=\"toc-item-num\">2.5.5&nbsp;&nbsp;</span>Re-check learnable parameters</a></span></li><li><span><a href=\"#Save-model\" data-toc-modified-id=\"Save-model-2.5.6\"><span class=\"toc-item-num\">2.5.6&nbsp;&nbsp;</span>Save model</a></span></li><li><span><a href=\"#try-drop_mult-0.5\" data-toc-modified-id=\"try-drop_mult-0.5-2.5.7\"><span class=\"toc-item-num\">2.5.7&nbsp;&nbsp;</span>try drop_mult 0.5</a></span></li><li><span><a href=\"#try-original-wikitext-param-training\" data-toc-modified-id=\"try-original-wikitext-param-training-2.5.8\"><span class=\"toc-item-num\">2.5.8&nbsp;&nbsp;</span>try original wikitext param training</a></span></li></ul></li></ul></li><li><span><a href=\"#Finetuning-LM-with-sentiment-analysis-data\" data-toc-modified-id=\"Finetuning-LM-with-sentiment-analysis-data-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Finetuning LM with sentiment analysis data</a></span><ul class=\"toc-item\"><li><span><a href=\"#prepare-datablock-and-dataloaders\" data-toc-modified-id=\"prepare-datablock-and-dataloaders-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>prepare datablock and dataloaders</a></span></li><li><span><a href=\"#Load-params-and-vocab\" data-toc-modified-id=\"Load-params-and-vocab-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Load params and vocab</a></span></li><li><span><a href=\"#training\" data-toc-modified-id=\"training-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>training</a></span></li></ul></li><li><span><a href=\"#Sentiment-classification\" data-toc-modified-id=\"Sentiment-classification-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Sentiment classification</a></span><ul class=\"toc-item\"><li><span><a href=\"#prepare-text-clas-datablock-and-dataloaders\" data-toc-modified-id=\"prepare-text-clas-datablock-and-dataloaders-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>prepare text clas datablock and dataloaders</a></span></li><li><span><a href=\"#study-dataloaders-and-tfms\" data-toc-modified-id=\"study-dataloaders-and-tfms-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>study dataloaders and tfms</a></span></li><li><span><a href=\"#SortedDL\" data-toc-modified-id=\"SortedDL-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>SortedDL</a></span></li><li><span><a href=\"#datablock-tfms\" data-toc-modified-id=\"datablock-tfms-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>datablock tfms</a></span></li><li><span><a href=\"#datasets-and-its-tfms\" data-toc-modified-id=\"datasets-and-its-tfms-4.5\"><span class=\"toc-item-num\">4.5&nbsp;&nbsp;</span>datasets and its tfms</a></span></li><li><span><a href=\"#Training\" data-toc-modified-id=\"Training-4.6\"><span class=\"toc-item-num\">4.6&nbsp;&nbsp;</span>Training</a></span><ul class=\"toc-item\"><li><span><a href=\"#define-sentiment-clas-learner\" data-toc-modified-id=\"define-sentiment-clas-learner-4.6.1\"><span class=\"toc-item-num\">4.6.1&nbsp;&nbsp;</span>define sentiment clas learner</a></span></li><li><span><a href=\"#param-groups-and-weight-shape\" data-toc-modified-id=\"param-groups-and-weight-shape-4.6.2\"><span class=\"toc-item-num\">4.6.2&nbsp;&nbsp;</span>param groups and weight shape</a></span></li><li><span><a href=\"#training\" data-toc-modified-id=\"training-4.6.3\"><span class=\"toc-item-num\">4.6.3&nbsp;&nbsp;</span>training</a></span></li></ul></li></ul></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -6298,6 +6308,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "298.55px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
