--- a/stanford_subword_models.ipynb
+++ b/stanford_subword_models.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Character-level-model\" data-toc-modified-id=\"Character-level-model-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Character-level model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Comparing-char-model-with-BPE-model-(seq2seq-machine-translation)\" data-toc-modified-id=\"Comparing-char-model-with-BPE-model-(seq2seq-machine-translation)-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Comparing char model with BPE model (seq2seq machine translation)</a></span></li></ul></li><li><span><a href=\"#Sub-word-models:-two-trends\" data-toc-modified-id=\"Sub-word-models:-two-trends-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Sub-word models: two trends</a></span><ul class=\"toc-item\"><li><span><a href=\"#Byte-pair-encoding-(BPE)\" data-toc-modified-id=\"Byte-pair-encoding-(BPE)-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Byte pair encoding (BPE)</a></span></li><li><span><a href=\"#sentencepiece-model\" data-toc-modified-id=\"sentencepiece-model-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>sentencepiece model</a></span></li><li><span><a href=\"#Wordpiece\" data-toc-modified-id=\"Wordpiece-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Wordpiece</a></span></li></ul></li><li><span><a href=\"#Use-character-level-model-for-word-level-model\" data-toc-modified-id=\"Use-character-level-model-for-word-level-model-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Use character-level model for word-level model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Using-cnn-+-maxpool\" data-toc-modified-id=\"Using-cnn-+-maxpool-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Using cnn + maxpool</a></span></li><li><span><a href=\"#using-lstm\" data-toc-modified-id=\"using-lstm-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>using lstm</a></span></li><li><span><a href=\"#Character-Aware-Neural-Language-Models\" data-toc-modified-id=\"Character-Aware-Neural-Language-Models-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Character-Aware Neural Language Models</a></span></li></ul></li><li><span><a href=\"#Test-word-similarity-between-char-level-word-embedding-and-word-level-word-embedding\" data-toc-modified-id=\"Test-word-similarity-between-char-level-word-embedding-and-word-level-word-embedding-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Test word similarity between char-level word embedding and word-level word embedding</a></span></li><li><span><a href=\"#Combining-word-level-and-character-level-model\" data-toc-modified-id=\"Combining-word-level-and-character-level-model-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Combining word-level and character-level model</a></span><ul class=\"toc-item\"><li><span><a href=\"#Cons\" data-toc-modified-id=\"Cons-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Cons</a></span></li></ul></li><li><span><a href=\"#FastText-embeddings\" data-toc-modified-id=\"FastText-embeddings-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>FastText embeddings</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Subword models: models below the word level\n",
@@ -241,42 +251,54 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Use character-level model for word-level model "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Using cnn + maxpool"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/novel_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## using lstm"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/subword_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Run **character-level** biLSTM and concatenate 2 final hidden states (known as 'outward representation')\n",
     "- Use that representation for another LSTM LM model that works along **sequence of words** (TODO: need details on this)\n",
@@ -285,14 +307,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Character-Aware Neural Language Models"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "https://youtu.be/9oTHFx0Gg3Q?t=3280\n",
     "\n",
@@ -303,28 +329,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/subword_4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Test word similarity between char-level word embedding and word-level word embedding"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![](images/subword_5.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "For LSTM-Char (b4 highway): since we initially doing conv layer + maxpool, the word embedding results from char-level model still remember things about character\n",
     "- All words with 'le' or 'ile' (conv filter size 2 or 3) are similar to 'while'\n",
@@ -336,7 +370,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "For out-of-vocabulary similarity (note that LSTM-Word can't handle OOV problem, hence the first blank row)\n",
     "\n",
@@ -413,18 +449,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# FastText embeddings"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- Aim: a next generation efficient word2vec-like word representation library, but **better for rare words and languages with lots of morphology**\n",
     "- An extension of the w2v skip-gram model with character n-grams\n",
@@ -434,18 +466,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "![](images/subword_9.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- A word will be broken down using n-grams, for example the word 'where' will be represented by 6 tokens. Note that \"<\" and \">\" are boundary symbols\n",
     "- Using the same w2v mechanism, calculate *similarity* by doing the **dot product between context (neighbor) vector and center-word vector, but now the center-word vector will correspond all 6 of those tokens' vector**. We will sum them together (there's a hashing trick for this)"
@@ -468,7 +496,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "328.4px",
+    "left": "10px",
+    "top": "150px",
+    "width": "248.55px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
