--- a/fastai2_huggingface_nlp/hugging-face-quickstart.ipynb
+++ b/fastai2_huggingface_nlp/hugging-face-quickstart.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Quick-start\" data-toc-modified-id=\"Quick-start-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Quick start</a></span></li><li><span><a href=\"#Load-tokenizer-and-preprocess-our-example-text\" data-toc-modified-id=\"Load-tokenizer-and-preprocess-our-example-text-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Load tokenizer and preprocess our example text</a></span></li><li><span><a href=\"#Load-model-for-training\" data-toc-modified-id=\"Load-model-for-training-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Load model for training</a></span><ul class=\"toc-item\"><li><span><a href=\"#BERT-model-with-no-head\" data-toc-modified-id=\"BERT-model-with-no-head-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>BERT model with no head</a></span></li><li><span><a href=\"#BERT-model-with-head-to-predict-mask-token\" data-toc-modified-id=\"BERT-model-with-head-to-predict-mask-token-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>BERT model with head to predict mask token</a></span><ul class=\"toc-item\"><li><span><a href=\"#Multiple-masks\" data-toc-modified-id=\"Multiple-masks-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>Multiple masks</a></span></li></ul></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Quick start"
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +97,7 @@
        " '[SEP]']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +130,7 @@
        "14"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +171,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## BERT model with no head"
    ]
@@ -169,7 +181,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Load pre-trained model (weights)\n",
@@ -180,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -494,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -514,7 +532,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# If you have a GPU, put everything on cuda\n",
@@ -526,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -546,7 +568,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Predict hidden states features for each layer\n",
@@ -562,7 +586,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# We have encoded our input sequence in a FloatTensor of shape \n",
@@ -573,7 +599,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -593,7 +621,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -615,7 +645,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -642,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -680,6 +712,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 14])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -695,7 +747,10 @@
     }
    ],
    "source": [
-    "len(outputs)"
+    "len(outputs) # tuple of 1. In this case, model just returns head output for every token in the input\n",
+    "# It doesn't return loss (because you don't input the label y for it to calculate loss)\n",
+    "# which is different from BertForSequenceClassification, where your data should also have label\n",
+    "# In this case, you only input the tokenized sentence into BertForMaskedLM (a language model)"
    ]
   },
   {
@@ -715,7 +770,6 @@
     }
    ],
    "source": [
-    "# for BERt masked prediction, it will output result for every token in the input.\n",
     "predictions.shape"
    ]
   },
@@ -1089,6 +1143,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "220.72px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
