adding table of contents

--- a/fastai_1_stopwords_lemm_svd_nmf.ipynb
+++ b/fastai_1_stopwords_lemm_svd_nmf.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Get-data\" data-toc-modified-id=\"Get-data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Get data</a></span></li><li><span><a href=\"#Stop-words\" data-toc-modified-id=\"Stop-words-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Stop words</a></span></li><li><span><a href=\"#stemming-and-lemmatization\" data-toc-modified-id=\"stemming-and-lemmatization-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>stemming and lemmatization</a></span></li><li><span><a href=\"#Data-processing---Bag-of-words\" data-toc-modified-id=\"Data-processing---Bag-of-words-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Data processing - Bag of words</a></span></li><li><span><a href=\"#SVD\" data-toc-modified-id=\"SVD-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>SVD</a></span><ul class=\"toc-item\"><li><span><a href=\"#Full-SVD\" data-toc-modified-id=\"Full-SVD-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Full SVD</a></span></li><li><span><a href=\"#Reduced-SVD\" data-toc-modified-id=\"Reduced-SVD-5.2\"><span class=\"toc-item-num\">5.2&nbsp;&nbsp;</span>Reduced SVD</a></span></li><li><span><a href=\"#Dwell-into-'topics'\" data-toc-modified-id=\"Dwell-into-'topics'-5.3\"><span class=\"toc-item-num\">5.3&nbsp;&nbsp;</span>Dwell into 'topics'</a></span></li></ul></li><li><span><a href=\"#Non-negative-matrix-factorization-(NMF)\" data-toc-modified-id=\"Non-negative-matrix-factorization-(NMF)-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Non-negative matrix factorization (NMF)</a></span></li><li><span><a href=\"#TF-IDF-and-using-NMF-on-TF-IDF\" data-toc-modified-id=\"TF-IDF-and-using-NMF-on-TF-IDF-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>TF-IDF and using NMF on TF-IDF</a></span></li><li><span><a href=\"#Truncated-SVD\" data-toc-modified-id=\"Truncated-SVD-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Truncated SVD</a></span></li><li><span><a href=\"#Cons-of-using-classical-decomposition\" data-toc-modified-id=\"Cons-of-using-classical-decomposition-9\"><span class=\"toc-item-num\">9&nbsp;&nbsp;</span>Cons of using classical decomposition</a></span></li><li><span><a href=\"#Randomized-SVD\" data-toc-modified-id=\"Randomized-SVD-10\"><span class=\"toc-item-num\">10&nbsp;&nbsp;</span>Randomized SVD</a></span></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1149,7 +1159,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "298.55px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
