--- a/stanford_nameentity_dependencyparser.ipynb
+++ b/stanford_nameentity_dependencyparser.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#What-is-Name-Entity-Recognition\" data-toc-modified-id=\"What-is-Name-Entity-Recognition-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>What is Name Entity Recognition</a></span></li><li><span><a href=\"#Window-classification\" data-toc-modified-id=\"Window-classification-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Window classification</a></span><ul class=\"toc-item\"><li><span><a href=\"#Softmax-classifier\" data-toc-modified-id=\"Softmax-classifier-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Softmax classifier</a></span></li><li><span><a href=\"#Binary-classifier-with-unnormalized-score\" data-toc-modified-id=\"Binary-classifier-with-unnormalized-score-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Binary classifier with unnormalized score</a></span><ul class=\"toc-item\"><li><span><a href=\"#Neural-net-feed-forward-for-this-architecture\" data-toc-modified-id=\"Neural-net-feed-forward-for-this-architecture-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Neural net feed forward for this architecture</a></span></li></ul></li><li><span><a href=\"#Cons-of-updating-word-vectors-using-SGD\" data-toc-modified-id=\"Cons-of-updating-word-vectors-using-SGD-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Cons of updating word vectors using SGD</a></span></li></ul></li><li><span><a href=\"#Dependency\" data-toc-modified-id=\"Dependency-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Dependency</a></span><ul class=\"toc-item\"><li><span><a href=\"#definition\" data-toc-modified-id=\"definition-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>definition</a></span></li><li><span><a href=\"#Greedy-transition-based-parsing\" data-toc-modified-id=\"Greedy-transition-based-parsing-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Greedy transition-based parsing</a></span></li><li><span><a href=\"#Use-machine-learning-to-predict-action\" data-toc-modified-id=\"Use-machine-learning-to-predict-action-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Use machine learning to predict action</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "heading_collapsed": true
    },
    "source": [
@@ -367,7 +377,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "220.72px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
