--- a/stanford_w2v_formula_and_params.ipynb
+++ b/stanford_w2v_formula_and_params.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#The-goal-of-this-course:-to-represent-the-meaning-of-words\" data-toc-modified-id=\"The-goal-of-this-course:-to-represent-the-meaning-of-words-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>The goal of this course: to represent the meaning of words</a></span></li><li><span><a href=\"#Distributional-semantics\" data-toc-modified-id=\"Distributional-semantics-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Distributional semantics</a></span><ul class=\"toc-item\"><li><span><a href=\"#Word2Vec-skip-gram\" data-toc-modified-id=\"Word2Vec-skip-gram-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Word2Vec skip-gram</a></span></li><li><span><a href=\"#The-loss-function\" data-toc-modified-id=\"The-loss-function-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>The loss function</a></span><ul class=\"toc-item\"><li><span><a href=\"#Explain-the-loss-function-and-P(o|c)-(aka-P(neighbor|center)\" data-toc-modified-id=\"Explain-the-loss-function-and-P(o|c)-(aka-P(neighbor|center)-2.2.1\"><span class=\"toc-item-num\">2.2.1&nbsp;&nbsp;</span>Explain the loss function and P(o|c) (aka P(neighbor|center)</a></span></li></ul></li><li><span><a href=\"#Train-model-and-update-word-vector-matrix\" data-toc-modified-id=\"Train-model-and-update-word-vector-matrix-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Train model and update word vector matrix</a></span><ul class=\"toc-item\"><li><span><a href=\"#Formula-for-derivative-of-loss-function\" data-toc-modified-id=\"Formula-for-derivative-of-loss-function-2.3.1\"><span class=\"toc-item-num\">2.3.1&nbsp;&nbsp;</span>Formula for derivative of loss function</a></span></li></ul></li><li><span><a href=\"#Skip-gram-model-with-negative-sampling\" data-toc-modified-id=\"Skip-gram-model-with-negative-sampling-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Skip-gram model with negative sampling</a></span></li><li><span><a href=\"#Continuous-bag-of-words-(CBOW)\" data-toc-modified-id=\"Continuous-bag-of-words-(CBOW)-2.5\"><span class=\"toc-item-num\">2.5&nbsp;&nbsp;</span>Continuous bag of words (CBOW)</a></span></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "https://www.youtube.com/watch?v=8rXD5-xhemo&list=PLoROMvodv4rOhcuXMZkNm7j3fVwBBY42z&index=2&t=2433s\n",
@@ -308,7 +318,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "220.72px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
