--- a/s1/exploring_word_vectors.ipynb
+++ b/s1/exploring_word_vectors.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#CS224N-Assignment-1:-Exploring-Word-Vectors-(25-Points)\" data-toc-modified-id=\"CS224N-Assignment-1:-Exploring-Word-Vectors-(25-Points)-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>CS224N Assignment 1: Exploring Word Vectors (25 Points)</a></span></li><li><span><a href=\"#Import\" data-toc-modified-id=\"Import-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Import</a></span></li><li><span><a href=\"#Word-Vectors\" data-toc-modified-id=\"Word-Vectors-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Word Vectors</a></span><ul class=\"toc-item\"><li><span><a href=\"#Part-1:-Count-Based-Word-Vectors-(10-points)\" data-toc-modified-id=\"Part-1:-Count-Based-Word-Vectors-(10-points)-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Part 1: Count-Based Word Vectors (10 points)</a></span><ul class=\"toc-item\"><li><span><a href=\"#Co-Occurrence\" data-toc-modified-id=\"Co-Occurrence-3.1.1\"><span class=\"toc-item-num\">3.1.1&nbsp;&nbsp;</span>Co-Occurrence</a></span></li><li><span><a href=\"#PROS,-CONS-AND-TIPS-OF-CO-OCCURENCE\" data-toc-modified-id=\"PROS,-CONS-AND-TIPS-OF-CO-OCCURENCE-3.1.2\"><span class=\"toc-item-num\">3.1.2&nbsp;&nbsp;</span>PROS, CONS AND TIPS OF CO-OCCURENCE</a></span></li><li><span><a href=\"#Plotting-Co-Occurrence-Word-Embeddings\" data-toc-modified-id=\"Plotting-Co-Occurrence-Word-Embeddings-3.1.3\"><span class=\"toc-item-num\">3.1.3&nbsp;&nbsp;</span>Plotting Co-Occurrence Word Embeddings</a></span></li><li><span><a href=\"#Question-1.1:-Implement-distinct_words-[code]-(2-points)\" data-toc-modified-id=\"Question-1.1:-Implement-distinct_words-[code]-(2-points)-3.1.4\"><span class=\"toc-item-num\">3.1.4&nbsp;&nbsp;</span>Question 1.1: Implement <code>distinct_words</code> [code] (2 points)</a></span></li><li><span><a href=\"#Question-1.2:-Implement-compute_co_occurrence_matrix-[code]-(3-points)\" data-toc-modified-id=\"Question-1.2:-Implement-compute_co_occurrence_matrix-[code]-(3-points)-3.1.5\"><span class=\"toc-item-num\">3.1.5&nbsp;&nbsp;</span>Question 1.2: Implement <code>compute_co_occurrence_matrix</code> [code] (3 points)</a></span></li><li><span><a href=\"#Question-1.3:-Implement-reduce_to_k_dim-[code]-(1-point)\" data-toc-modified-id=\"Question-1.3:-Implement-reduce_to_k_dim-[code]-(1-point)-3.1.6\"><span class=\"toc-item-num\">3.1.6&nbsp;&nbsp;</span>Question 1.3: Implement <code>reduce_to_k_dim</code> [code] (1 point)</a></span></li><li><span><a href=\"#Question-1.4:-Implement-plot_embeddings-[code]-(1-point)\" data-toc-modified-id=\"Question-1.4:-Implement-plot_embeddings-[code]-(1-point)-3.1.7\"><span class=\"toc-item-num\">3.1.7&nbsp;&nbsp;</span>Question 1.4: Implement <code>plot_embeddings</code> [code] (1 point)</a></span></li><li><span><a href=\"#Question-1.5:-Co-Occurrence-Plot-Analysis-[written]-(3-points)\" data-toc-modified-id=\"Question-1.5:-Co-Occurrence-Plot-Analysis-[written]-(3-points)-3.1.8\"><span class=\"toc-item-num\">3.1.8&nbsp;&nbsp;</span>Question 1.5: Co-Occurrence Plot Analysis [written] (3 points)</a></span></li><li><span><a href=\"#try-TFIDF-and-SVD/truncated-SVD/NMF-for-word-embedding\" data-toc-modified-id=\"try-TFIDF-and-SVD/truncated-SVD/NMF-for-word-embedding-3.1.9\"><span class=\"toc-item-num\">3.1.9&nbsp;&nbsp;</span>try TFIDF and SVD/truncated SVD/NMF for word embedding</a></span><ul class=\"toc-item\"><li><span><a href=\"#truncated-SVD\" data-toc-modified-id=\"truncated-SVD-3.1.9.1\"><span class=\"toc-item-num\">3.1.9.1&nbsp;&nbsp;</span>truncated SVD</a></span></li><li><span><a href=\"#NMF\" data-toc-modified-id=\"NMF-3.1.9.2\"><span class=\"toc-item-num\">3.1.9.2&nbsp;&nbsp;</span>NMF</a></span></li></ul></li></ul></li><li><span><a href=\"#Part-2:-Prediction-Based-Word-Vectors-(15-points)\" data-toc-modified-id=\"Part-2:-Prediction-Based-Word-Vectors-(15-points)-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Part 2: Prediction-Based Word Vectors (15 points)</a></span><ul class=\"toc-item\"><li><span><a href=\"#GLOVE:-combining-the-ideas-of-co-occurence-count-matrix-and-neural-network-method-(from-skip-gram).\" data-toc-modified-id=\"GLOVE:-combining-the-ideas-of-co-occurence-count-matrix-and-neural-network-method-(from-skip-gram).-3.2.1\"><span class=\"toc-item-num\">3.2.1&nbsp;&nbsp;</span>GLOVE: combining the ideas of co-occurence count matrix and neural network method (from skip-gram).</a></span></li><li><span><a href=\"#Reducing-dimensionality-of-Word-Embeddings\" data-toc-modified-id=\"Reducing-dimensionality-of-Word-Embeddings-3.2.2\"><span class=\"toc-item-num\">3.2.2&nbsp;&nbsp;</span>Reducing dimensionality of Word Embeddings</a></span></li><li><span><a href=\"#Question-2.1:-GloVe-Plot-Analysis-[written]-(4-points)\" data-toc-modified-id=\"Question-2.1:-GloVe-Plot-Analysis-[written]-(4-points)-3.2.3\"><span class=\"toc-item-num\">3.2.3&nbsp;&nbsp;</span>Question 2.1: GloVe Plot Analysis [written] (4 points)</a></span></li><li><span><a href=\"#Cosine-Similarity\" data-toc-modified-id=\"Cosine-Similarity-3.2.4\"><span class=\"toc-item-num\">3.2.4&nbsp;&nbsp;</span>Cosine Similarity</a></span></li><li><span><a href=\"#Question-2.2:-Words-with-Multiple-Meanings-(2-points)-[code-+-written]\" data-toc-modified-id=\"Question-2.2:-Words-with-Multiple-Meanings-(2-points)-[code-+-written]-3.2.5\"><span class=\"toc-item-num\">3.2.5&nbsp;&nbsp;</span>Question 2.2: Words with Multiple Meanings (2 points) [code + written]</a></span></li><li><span><a href=\"#Question-2.3:-Synonyms-&amp;-Antonyms-(2-points)-[code-+-written]\" data-toc-modified-id=\"Question-2.3:-Synonyms-&amp;-Antonyms-(2-points)-[code-+-written]-3.2.6\"><span class=\"toc-item-num\">3.2.6&nbsp;&nbsp;</span>Question 2.3: Synonyms &amp; Antonyms (2 points) [code + written]</a></span></li><li><span><a href=\"#Solving-Analogies-with-Word-Vectors\" data-toc-modified-id=\"Solving-Analogies-with-Word-Vectors-3.2.7\"><span class=\"toc-item-num\">3.2.7&nbsp;&nbsp;</span>Solving Analogies with Word Vectors</a></span></li><li><span><a href=\"#Question-2.6:-Guided-Analysis-of-Bias-in-Word-Vectors-[written]-(1-point)\" data-toc-modified-id=\"Question-2.6:-Guided-Analysis-of-Bias-in-Word-Vectors-[written]-(1-point)-3.2.8\"><span class=\"toc-item-num\">3.2.8&nbsp;&nbsp;</span>Question 2.6: Guided Analysis of Bias in Word Vectors [written] (1 point)</a></span></li></ul></li></ul></li><li><span><a href=\"#Co-occurence-vs-skipgram/neural-net-approach\" data-toc-modified-id=\"Co-occurence-vs-skipgram/neural-net-approach-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Co-occurence vs skipgram/neural net approach</a></span></li><li><span><a href=\"#Spell-check-using-glove\" data-toc-modified-id=\"Spell-check-using-glove-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Spell check using glove</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# CS224N Assignment 1: Exploring Word Vectors (25 Points)"
@@ -2612,7 +2622,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "279.7px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
