--- a/s2/ex2-w2v-with-neg-sampling-sgd.ipynb
+++ b/s2/ex2-w2v-with-neg-sampling-sgd.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Implementing-w2v\" data-toc-modified-id=\"Implementing-w2v-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Implementing w2v</a></span><ul class=\"toc-item\"><li><span><a href=\"#Naive-softmax-w2v\" data-toc-modified-id=\"Naive-softmax-w2v-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Naive softmax w2v</a></span></li><li><span><a href=\"#Negative-sampling-W2V\" data-toc-modified-id=\"Negative-sampling-W2V-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Negative sampling W2V</a></span></li><li><span><a href=\"#Skipgram-implementation-for-1-center-word\" data-toc-modified-id=\"Skipgram-implementation-for-1-center-word-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Skipgram implementation for 1 center word</a></span></li></ul></li><li><span><a href=\"#Testing\" data-toc-modified-id=\"Testing-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Testing</a></span></li><li><span><a href=\"#SGD\" data-toc-modified-id=\"SGD-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>SGD</a></span></li></ul></div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -61,7 +71,7 @@
     "\n",
     "Each context-target pair is treated as a new observation in the data. For example, the target word “swing” in the above case produces four training samples: (“swing”, “sentence”), (“swing”, “should”), (“swing”, “the”), and (“swing”, “sword”).\n",
     "\n",
-    "The model learns to predict **one context word (output)** using **one target word (input)** at a time.\n"
+    "The model learns to predict **one context word (output) (NEIGHBOR WORD)** using **one target word (input) (CENTER WORD)** at a time.\n"
    ]
   },
   {
@@ -119,10 +129,14 @@
     "    matmu = N @ cc # (nx1)\n",
     "    yhat = softmax(matmu.squeeze())[:,np.newaxis] # (nx1)\n",
     "    \n",
+    "    # high similary => high @ => high sm (at that outsideWordIdx) => low negative log => low loss\n",
     "    loss = -np.log(yhat.squeeze())[outsideWordIdx]\n",
     "    \n",
     "    grad_matmu=yhat.copy()\n",
-    "    grad_matmu[outsideWordIdx]-=1 # y_pred - y_onehot, shape (nx1)\n",
+    "    grad_matmu[outsideWordIdx]-=1 # y_pred - y_onehot, shape (nx1). \n",
+    "# Because we do softmax then logloss so this is the gradient. \n",
+    "# y_onehot has 1 at the position of the NEIGHBOR WORD, 0 otherwise. We are predicting NEIGHBOR WORD\n",
+    "    \n",
     "    grad_cc = N.T @ grad_matmu # (mx1) \n",
     "    grad_N = grad_matmu @ cc.T # (nxm)\n",
     "        \n",
@@ -249,9 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Skipgram implementation for 1 center word"
    ]
@@ -259,9 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def skipgram(currentCenterWord, windowSize, outsideWords, word2Ind,\n",
@@ -647,7 +657,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "220.72px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
